Collapse Fix

--- a/style.css
+++ b/style.css
@@ -495,16 +495,6 @@ li{
     width: auto;
   }
 
-  .additionalColumn *{
-    margin-top: 2px;
-    margin-bottom: 7px;
-  }
-
-  .additionalColumn h3{
-    margin-top: 20px;
-    margin-bottom: 10px;
-  }
-
   .body{
     width: 90vw;
     margin-left: 3vw;
